--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
     "moduleDetection": "force",
     "noEmit": true,
 
-    /* Linting */
+    "jsx": "react-jsx", // 🔹
+
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
